syntax = "proto3";
package network.monitoringp.v1;

option go_package = "github.com/ignite/network/x/monitoringp/types";

message ConnectionChannelID {
  string channelID = 1;
}
