syntax = "proto3";
package network.profile.v1;

import "cosmos_proto/cosmos.proto";
import "gogoproto/gogo.proto";

option go_package = "github.com/ignite/network/x/profile/types";

message Validator {
  string address = 1 [(cosmos_proto.scalar) = "cosmos.AddressString"];
  repeated string operator_addresses = 2;
  ValidatorDescription description = 3 [(gogoproto.nullable) = false];
}

message ValidatorDescription {
  string identity = 1;
  string moniker = 2;
  string website = 3;
  string security_contact = 4;
  string details = 5;
}

message ValidatorByOperatorAddress {
  string operator_address = 1;
  string validator_address = 2 [(cosmos_proto.scalar) = "cosmos.AddressString"];
}
